--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -10,11 +9,7 @@ html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
   font-family: monospace;
   background-color:#0a0a0a;
-  background-image: radial-gradient(circle at 30% 30%, #ff66001a 10%, transparent 60%),
-                    radial-gradient(circle at 70% 70%, #ff99001a 10%, transparent 60%),
-                    linear-gradient(180deg, #000 0%, #111 100%);
   color:#ff6600;
-  position: relative;
 }
 
 /* --- LOADING SCREEN --- */
@@ -181,7 +176,220 @@ html, body {
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
-// Kód z předchozí verze – spawn, game loop, invert efekt, highscore, countdown atd.
+const startBtn=document.getElementById('startBtn');
+const indexBtn=document.getElementById('indexBtn');
+const indexPanel=document.getElementById('indexPanel');
+const countdownEl=document.getElementById('countdown');
+const scoreContainer=document.getElementById('scoreContainer');
+const scoreEl=document.getElementById('score');
+const highscoreEl=document.getElementById('highscore');
+const livesEl=document.getElementById('lives');
+const popSound=document.getElementById('popSound');
+const endScreen=document.getElementById('endScreen');
+const finalScoreText=document.getElementById('finalScoreText');
+const continueBtn=document.getElementById('continueBtn');
+const versionLabel=document.getElementById('versionLabel');
+const easterEl=document.getElementById('easterEgg');
+const closeBtn=document.querySelector('#indexPanel .closeBtn');
+const loadingScreen=document.getElementById('loadingScreen');
+
+let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
+
+// --- LOADING SCREEN ---
+window.addEventListener('load',()=>{
+  setTimeout(()=>{
+    loadingScreen.style.display='none';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    attachButtonEvents();
+  },3550);
+});
+
+// --- BUTTON LOGIC ---
+function attachButtonEvents(){
+  startBtn.addEventListener('click',startCountdown);
+  indexBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    } else {
+      indexPanel.style.top='30%';
+      startBtn.style.display='none';
+      indexBtn.style.display='none';
+    }
+  });
+  closeBtn.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    indexPanel.style.top='100%';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+  });
+  indexPanel.addEventListener('click',e=>e.stopPropagation());
+  document.body.addEventListener('click',()=>{
+    if(indexPanel.style.top==='30%'){
+      indexPanel.style.top='100%';
+      startBtn.style.display='block';
+      indexBtn.style.display='block';
+    }
+  });
+  continueBtn.addEventListener('click',()=>{
+    endScreen.style.display='none';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    versionLabel.style.display='block';
+  });
+}
+
+// --- Countdown ---
+function startCountdown(){
+  versionLabel.style.display='none';
+  startBtn.style.display='none';
+  indexBtn.style.display='none';
+  countdownEl.style.display='block';
+  let count=3;
+  countdownEl.textContent=count;
+  const interval=setInterval(()=>{
+    count--;
+    if(count>0) countdownEl.textContent=count;
+    else{
+      clearInterval(interval);
+      countdownEl.style.display='none';
+      scoreContainer.style.display='block';
+      startGame();
+    }
+  },1000);
+}
+
+// --- GAME LOGIC ---
+function startGame(){
+  score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
+  scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
+  spawnBubble();
+  requestAnimationFrame(updateBubbles);
+}
+
+// --- Bubble spawning ---
+function spawnBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const chance=Math.random();
+  const bubble=document.createElement('div');
+  bubble.classList.add('bubble');
+
+  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0785){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60;
+  bubble.style.width=`${size}px`;
+  bubble.style.height=`${size}px`;
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{
+    if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
+    bubble.remove();
+    bubbles=bubbles.filter(b=>b!==bubble);
+
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{
+        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
+        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
+      });
+    }
+    else if(bubble.dataset.type==="invert"){
+      document.body.style.filter="invert(1)";
+      score+=10;
+      setTimeout(()=>{ document.body.style.filter="invert(0)"; },5000);
+    }
+    else if(bubble.dataset.type==="instawin"){
+      score=999999999;
+    }
+    else score++;
+
+    if(score>999999999) score=999999999;
+    scoreEl.textContent="Skóre: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
+  };
+
+  bubble.addEventListener('click',pop);
+  bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,500);
+}
+
+function spawnSingleBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60;
+  bubble.style.width=`${size}px`; bubble.style.height=`${size}px`;
+  bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{ 
+    if(!gameRunning) return; score++; 
+    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+  };
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+}
+
+function updateBubbles(){
+  if(!gameRunning) return;
+  bubbles.forEach(bubble=>{
+    const top=parseFloat(bubble.style.top);
+    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+    if(top<=0){ 
+      lives--; livesEl.textContent="Životy: "+lives; 
+      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
+      if(lives<=0) endGame();
+    }
+  });
+  requestAnimationFrame(updateBubbles);
+}
+
+// --- END GAME ---
+function endGame(){
+  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreContainer.style.display='none';
+  if(score===12 || score<=3){
+    easterEl.textContent = (score===12?'12':'BRUH');
+    easterEl.style.display='flex';
+    easterEl.style.animation='fadeShake 5s forwards';
+    setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
+  } else {
+    showEndScreen();
+  }
+}
+
+function showEndScreen(){
+  finalScoreText.textContent="Tvé skóre: "+score;
+  endScreen.style.display='flex';
+}
 </script>
 </body>
 </html>
