--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ html, body {
   100% { text-shadow:0 0 5px #ff3300, 0 0 10px #ff6600; opacity:0.2; }
 }
 
-/* --- HOME SCREEN --- */
+/* --- HOME SCREEN BUTTONS --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
   font-size:28px; padding:15px 35px;
@@ -39,7 +39,7 @@ html, body {
 #startBtn { margin-top:30vh; }
 #indexBtn { margin-top:20px; }
 
-/* --- Countdown & Score --- */
+/* --- SCORE --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
@@ -56,7 +56,7 @@ html, body {
 #score { font-size:28px; color:#ff6600; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* --- Bubbles --- */
+/* --- BUBBLES --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
@@ -72,7 +72,7 @@ html, body {
 .bubble.invert { background: linear-gradient(135deg,#000,#fff); color:#000; font-size:24px; box-shadow:0 0 20px #fff inset;}
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#990000); color:#fff; font-size:24px; box-shadow:0 0 20px #f00 inset;}
 
-/* --- Index Panel --- */
+/* --- INDEX PANEL --- */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%;
   max-height:70%; background:rgba(10,10,10,0.95);
@@ -96,7 +96,7 @@ html, body {
 
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* --- End Screen --- */
+/* --- END SCREEN --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
@@ -150,7 +150,13 @@ html, body {
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <!-- ... (zbytek indexu stejný) ... -->
+  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#ffff00,#ff9900);color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#00ff00,#00aa00);color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#ff00ff,#9900ff);">3×12</div><div class="desc"><span class="rarity">Vzácná 2%:</span> Spawnuje 3 bubliny</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#ff6600,#ffff00);color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Vzácná 3%:</span> Gravitační bublina</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#000,#fff);color:#000;">!12!</div><div class="desc"><span class="rarity">Vzácná 1,5%:</span> Obrátí barvy +10 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background:linear-gradient(135deg,#ff0000,#990000);color:#fff;">?12?</div><div class="desc"><span class="rarity">Vzácná 0,1%:</span> Okamžitá výhra</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -170,20 +176,16 @@ html, body {
 <!-- Zvuky -->
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
-<!-- 🎵 Hudba na pozadí (nahraď URL svou MP3 adresou) -->
-<audio id="bgMusic" src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Komiku/It's_time_for_adventure/Komiku_-_02_-_The_Adventure_Begins.mp3" loop autoplay></audio>
+<!-- 🎵 Hudba na pozadí -->
+<audio id="bgMusic" src="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Komiku/Its_time_for_adventure/Komiku_-_02_-_The_Adventure_Begins.mp3" loop></audio>
 
 <script>
-// --- Background music ---
-const bgMusic = document.getElementById("bgMusic");
-bgMusic.volume = 0.3; // hlasitost (0–1)
+const bgMusic=document.getElementById('bgMusic');
+bgMusic.volume=0.4;
 
-// Na mobilu se hudba spustí až po kliknutí kvůli autoplay policy
-document.addEventListener("click", () => {
-  if (bgMusic.paused) bgMusic.play();
-}, { once: true });
+// Autoplay po prvním kliknutí (kvůli mobilní politice)
+document.addEventListener('click',()=>{ if(bgMusic.paused) bgMusic.play(); },{once:true});
 
-// --- Zbytek tvého JS (nezměněno kromě hudby) ---
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -203,7 +205,6 @@ const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
 
-// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
@@ -213,7 +214,6 @@ window.addEventListener('load',()=>{
   },3550);
 });
 
-// --- BUTTON LOGIC ---
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -234,7 +234,6 @@ function attachButtonEvents(){
     startBtn.style.display='block';
     indexBtn.style.display='block';
   });
-  indexPanel.addEventListener('click',e=>e.stopPropagation());
   document.body.addEventListener('click',()=>{
     if(indexPanel.style.top==='30%'){
       indexPanel.style.top='100%';
@@ -250,8 +249,111 @@ function attachButtonEvents(){
   });
 }
 
-// --- Countdown, Game logic, Bubbles, End screen ---
-// (vše zůstává identické s tvým kódem)
+function startCountdown(){
+  versionLabel.style.display='none';
+  startBtn.style.display='none';
+  indexBtn.style.display='none';
+  countdownEl.style.display='block';
+  let count=3;
+  countdownEl.textContent=count;
+  const interval=setInterval(()=>{
+    count--;
+    if(count>0) countdownEl.textContent=count;
+    else{
+      clearInterval(interval);
+      countdownEl.style.display='none';
+      scoreContainer.style.display='block';
+      startGame();
+    }
+  },1000);
+}
+
+function startGame(){
+  score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
+  scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
+  spawnBubble();
+  requestAnimationFrame(updateBubbles);
+}
+
+function spawnBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const chance=Math.random();
+  const bubble=document.createElement('div');
+  bubble.classList.add('bubble');
+
+  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else if(chance<=0.0775){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0005){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60;
+  bubble.style.width=`${size}px`;
+  bubble.style.height=`${size}px`;
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{
+    if(!gameRunning) return;
+    popSound.currentTime=0; popSound.play();
+    bubble.remove();
+    bubbles=bubbles.filter(b=>b!==bubble);
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnBubble();
+    else if(bubble.dataset.type==="invert"){document.body.style.filter="invert(1)";score+=10;setTimeout(()=>document.body.style.filter="invert(0)",5000);}
+    else if(bubble.dataset.type==="instawin"){score=999999999;}
+    else score++;
+    if(score>highscore){highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore;}
+    scoreEl.textContent="Skóre: "+score;
+    if(bubble.dataset.type==="instawin"){showEasterEgg();}
+  };
+  bubble.addEventListener('click',pop);
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,Math.random()*1500+500);
+}
+
+function updateBubbles(){
+  if(!gameRunning) return;
+  for(let i=bubbles.length-1;i>=0;i--){
+    const b=bubbles[i];
+    const speed=parseFloat(b.dataset.speed);
+    b.style.top=(b.offsetTop-speed)+'px';
+    if(b.offsetTop<-100){
+      b.remove();
+      bubbles.splice(i,1);
+      lives--;
+      livesEl.textContent="Životy: "+lives;
+      if(lives<=0) endGame();
+    }
+  }
+  requestAnimationFrame(updateBubbles);
+}
+
+function endGame(){
+  gameRunning=false;
+  bubbles.forEach(b=>b.remove());
+  bubbles=[];
+  scoreContainer.style.display='none';
+  endScreen.style.display='flex';
+  finalScoreText.textContent=`Konec hry! Skóre: ${score}`;
+}
+
+function showEasterEgg(){
+  gameRunning=false;
+  bubbles.forEach(b=>b.remove());
+  bubbles=[];
+  scoreContainer.style.display='none';
+  easterEl.style.display='flex';
+  easterEl.textContent='EASTER EGG!';
+  setTimeout(()=>{easterEl.style.display='none'; endGame();},5000);
+}
 </script>
 </body>
 </html>
